--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --detectOpenHandles --runInBand --forceExit --coverage --verbose --watchAll",
     "dev": "nodemon ./bin/listen.js",
     "docker": "NODE_ENV=docker && node ./bin/listen.js",
-    "docker-test": "NODE_ENV=test  && npx sequelize-cli db:migrate --env test && jest --detectOpenHandles --runInBand --forceExit --coverage --verbose"
+    "docker-test": "NODE_ENV=test && npx sequelize-cli db:create --env test && npx sequelize-cli db:migrate --env test && jest --detectOpenHandles --runInBand --forceExit --coverage --verbose"
   },
   "keywords": [],
   "author": "",
